--- a/website/src/pages/index.module.css
+++ b/website/src/pages/index.module.css
@@ -22,3 +22,13 @@
   justify-content: center;
 }
 
+
+h1 {
+    font-size: 2.3rem;
+}
+
+body {
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
+    font-size: 0.95rem;
+    line-height: 1.5;
+}
