--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -18,6 +18,8 @@
   --ifm-code-font-size: 85%;
   --ifm-font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, Liberation Mono, Courier New, monospace;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+
+  --doc-sidebar-width: 250px !important;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
