--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -36,3 +36,9 @@
   --ifm-color-primary-lightest: #4ec5dd;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+
+html.plugin-blog h2,
+html.plugin-blog.blog-post-page h1 {
+  font-size: 2.2rem;
+}
