--- a/wvlet-ui-playground/index.css
+++ b/wvlet-ui-playground/index.css
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+@import "tailwindcss" source("../");
 
 @layer utilities {
     /* https://stackoverflow.com/questions/66416614/how-to-create-scrollable-element-in-tailwind-without-a-scrollbar */
@@ -13,3 +13,7 @@
     }
 }
 
+
+body {
+    @apply text-white bg-gray-800 text-sky-300;
+}
